ocaml (3.11.0-2) UNRELEASED; urgency=low

  * Add DM-Upload-Allowed (with Stefano's blessing)
  * Remove Julien from Uploaders (on his request)
  * Remove binary package-specific copyright files
  * Major changes in debian/rules:
    - more extensive use of debhelper 7
    - do no longer use deprecated dh_movefiles and *.files
    - get closer to CDBS API
    - add a build cache (for Debian debugging)
    - ship labltk examples in a tarball
    - reflect original locations of camlp4 *.mli files in binary packages
  * Add dbm_ldopts.dpatch, to add missing linking options for dbm
    (fixes ocsigen FTBFS)
  * Remove man-ocamlmklib.dpatch, and put manpage in debian/man
  * Remove {dumpobj,objinfo}.dpatch, and put manpages in debian/man
  * Build and install dumpapprox, and provide a manpage
  * Discriminate *-nox packages in short descriptions (thanks Lintian)

 -- Stephane Glondu <steph@glondu.net>  Mon, 16 Feb 2009 00:27:36 +0100

ocaml (3.11.0-1) experimental; urgency=low

  * New upstream release:
    - manpages.dpatch, ocamldoc.dpatch removed (merged upstream)
    - for_pack_static.dpatch removed (obsolete)
    - call_ld_with_proper_flags.dpatch fixed (Closes: #506286)
  * Add debian/changelog entry for version 3.09.2-8
  * Install *.cmxs (and matching *.cma) in ocaml-base*
  * Don't put .git directory in ocaml-source

 -- Stephane Glondu <steph@glondu.net>  Fri, 05 Dec 2008 19:57:18 +0100

ocaml (3.11.0~beta1-1) experimental; urgency=low

  [ Stephane Glondu ]
  * New upstream beta release:
    - camlrun_shared.dpatch removed (integrated upstream)
    - not-native-no-aspp.dpatch removed (thanks to upstream bugfix)
    - all other patches updated
    - manpages.dpatch and ocamldoc.dpatch added
    - dependency to gcc-4.2 on arm removed
  * Switching packaging to git (from svn)
  * Bump debhelper compatibility level to 7, and use debian/clean feature
    of dh_clean
  * Add myself to uploaders, and update Julien's address