@@ -7,6 +7,7 @@ ocaml (3.11.0-2) UNRELEASED; urgency=low
     - more extensive use of debhelper 7
     - do no longer use deprecated dh_movefiles and *.files
     - get closer to CDBS API
+    - use ocamlinit snippet provided by dh-ocaml
     - add a build cache (for Debian debugging)
     - ship labltk examples in a tarball
     - reflect original locations of camlp4 *.mli files in binary packages
@@ -17,7 +18,7 @@ ocaml (3.11.0-2) UNRELEASED; urgency=low
   * Build and install dumpapprox, and provide a manpage
   * Discriminate *-nox packages in short descriptions (thanks Lintian)
 
- -- Stephane Glondu <steph@glondu.net>  Mon, 16 Feb 2009 00:27:36 +0100
+ -- Stephane Glondu <steph@glondu.net>  Mon, 16 Feb 2009 16:49:39 +0100
 
 ocaml (3.11.0-1) experimental; urgency=low
 
